🐛💄 fix some minor spacing issues

--- a/src/style/_main.scss
+++ b/src/style/_main.scss
@@ -310,7 +310,7 @@ section {
   margin-bottom: 0.9rem;
 
   &:last-of-type {
-    margin-bottom: -0.5rem;
+    margin-bottom: 0;
   }
 
   header {
